# next-gen-amp-gitHub-copilot-provider

./: .dev-machine-assessment.md  .dev-machine-design.md  .dockerignore  .gitignore  .health-check-fix.sh  AGENTS.md  CHANGELOG.md  CONTEXT-TRANSFER.md  DEVELOPMENT.md  FEATURE-ARCHIVE.yaml  GIT-STATUS-NOW.txt  README.md  SCRATCH.md  STATE.yaml  bundle.md  pyproject.toml  pytest_output.txt  run_shadow_test.sh  run_tests.sh  test_provider.py
.amplifier/: commit-msg-f017-change1.txt  commit-msg-f017-change2.txt  commit-msg-f017-change3.txt  commit-msg-f017-change4.txt  commit-msg-task2.txt  commit-msg.txt  settings.yaml
.dev-machine/: Dockerfile  SETUP-GUIDE.md  apply_testing_patch.py  apply_testing_patch.sh  build.yaml  cleanup.yaml  commit-all.yaml  delete-loop-control.yaml  diagnostic_mount_test.py  direct_provider_test.py  docker-entrypoint.sh  docker-interactive.sh  docker-run.sh  docker-shadow-test.sh  f018-change2-commit.yaml  feature-spec-template.md  fix-iteration.yaml  git-output.yaml  github-copilot-provider.yaml  health-check.yaml  iteration.yaml  patch_mock_coordinator.py  provider-info.py  shadow-prompts.yaml  shadow-test-bundle.md  shadow-test.yaml  simple-commit.yaml  test-provider-mount.py  tightened-build.yaml  tightened-iteration.yaml  verify-status.yaml  working-session-instructions.md
.github/: copilot-instructions.md
.tool/: README.md  __init__.py  analyze_session.py  deep_log_scanner.py  evidence_collector.py  f045_compliance_suite.py  hidden_tool_prober.py  latest_evidence.md  log_collector.py  log_paths.py  negative_test_suite.py  probe_prompts_manual_test.md  pyrightconfig.json  session2_evidence.md  tool_analyzer.py  tool_tester.py  wsl_analyze.sh
.tools/: list-sdk-models.py  validate-recipes.sh
amplifier_module_provider_github_copilot/: __init__.py  provider.py  streaming.py  tool_parsing.py
config/: __init__.py  errors.yaml  events.yaml  retry.yaml
contracts/: behaviors.md  deny-destroy.md  error-hierarchy.md  event-vocabulary.md  provider-protocol.md  sdk-boundary.md  sdk-response.md  streaming-contract.md
debates/: GOLDEN_VISION_FINAL.md  GOLDEN_VISION_V2.md
mydocs/: DEPENDENCY-GRAPH-PHASE9.md  DEV-MACHINE-READY.md  DEV_MACHINE_EXPLAINED.md  ERROR_HANDLING_ANALYSIS.md  GIT_CHECKIN_GUIDE.md  PHASE-ARCHITECTURE-NOTES.md  Py-sdk-list-models.md  SELF-HEALING-GITHUB-EXPERIMENT.md  TDD-COMPLIANCE-AUDIT-principal-verdict.md  amp.txt  (+10 more)
(+257 files in other folders)
